--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -16,6 +16,8 @@ jobs:
   build:
     name: "Bump project version"
     runs-on: ubuntu-latest
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v2
         with:
