--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -28,6 +28,6 @@ jobs:
           cache: 'npm'
       - run: git config user.name "bump-bot"
       - run: git config user.email "bump-bot@bump.bot"
-      - run: npm version ${{ inputs.tag }}
-      - run: git push origin ${{ github.ref_name }}
+      - run: CREATED_TAG=$(npm version ${{ inputs.tag }})
+      - run: git push origin $CREATED_TAG
 
