chore: adds bump bot branch

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -28,7 +28,12 @@ jobs:
           cache: 'npm'
       - run: git config user.name "bump-bot"
       - run: git config user.email "bump-bot@bump.bot"
-      - run: |
-          CREATED_TAG=$(npm version ${{ inputs.tag }})
-          git push origin $CREATED_TAG
+      - run: git checkout -b bump-bot/${{ inputs.tag }}
+      - run: npm version ${{ inputs.tag }}
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          branch: bump-bot/${{ inputs.tag }}
+          delete-branch: true
+          title: Bump package version
 
