--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
-          branch: bump-bot/${{ inputs.tag }}
+          branch: master
           delete-branch: true
           title: Bump package version
 
